--- a/lab03/Exercise/Ex4/validateInput.html
+++ b/lab03/Exercise/Ex4/validateInput.html
@@ -6,7 +6,6 @@
   <title>Hiến Máu Tháng 4</title>
   <link rel="stylesheet" href="">
   <link rel="stylesheet" type="text/css" href="style.css">
-  
 </head>
 <body>
   
@@ -29,7 +28,7 @@
           </section> <!-- end of mssv -->
 
           <section class="element">
-            <div class="sex">
+            <div class="gender">
               <label for="gender">Giới Tính:  </label>
                 <input type="radio" name="sex" id="gender" value="option1" checked>
                 Male
@@ -56,7 +55,7 @@
 
           <section class="element">
             <label for="email">Email: </label>
-            <input type="email" class="form-control" id="email" placeholder=".nguyenvanA@gmail.com">
+            <input type="email" class="form-control" id="email" placeholder="nguyenvanA@gmail.com">
           </section> 
 
           <section class="element">
@@ -136,6 +135,5 @@
   </div> <!-- end of container -->
 
   <script type="text/javascript" src="script.js"></script>
-
 </body>
 </html>
